# Synatyp

./: .gitignore  LICENSE  README.md  biome_error.txt  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
documentation/: FEATURES.md  SECURITY.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  compiler.rs  lib.rs  main.rs  models.rs
src/components/Editor/: CodeEditor.module.css  CodeEditor.tsx  FormattingToolbar.module.css  FormattingToolbar.tsx  SplitView.module.css  SplitView.tsx  typstLanguage.ts
src/components/Layout/: ChatPanel.module.css  ChatPanel.tsx  NoFileSelected.tsx  ProjectModal.module.css  ProjectModal.tsx  Sidebar.module.css  Sidebar.tsx  StatusBar.module.css  StatusBar.tsx  Terminal.module.css  Terminal.tsx  TopBar.module.css  TopBar.tsx  WelcomeScreen.module.css  WelcomeScreen.tsx
src/components/Models/: ModelLibrary.tsx  templates.ts
src/components/Renderer/: PageCanvas.module.css  PageCanvas.tsx  SvgRenderer.module.css  SvgRenderer.tsx  VisualCursor.tsx  VisualEditOverlay.module.css  VisualEditOverlay.tsx
src/store/: editorStore.ts
src/styles/: globals.css  tokens.css
