[package]
name = "synatyp"
version = "0.1.0"
description = "A Tauri App"
authors = ["Your Name <you@example.com>"]
default-run = "synatyp"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synatyp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.13.0"
typst-svg = "0.13.0"
typst-pdf = "0.13.0"
notify = "8.0.0"
typst-assets = "0.13.0"
tokio = { version = "1", features = ["full"] }
ecow = "0.2"
comemo = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
fontdb = "0.23.0"
once_cell = "1.21.4"
chrono = "0.4.44"
typst-render = "0.13.0"
tiny-skia = "0.12.0"
resvg = "0.47.0"
base64 = "0.22.1"
rayon = "1.12.0"
image = { version = "0.25.10", features = ["jpeg"] }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
hmac = "0.12.1"
aead = "0.5.2"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }

